# main/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/work": {
+        "/gitcheck": {
             "post": {
                 "description": "Метод для отладки работы с git-ом",
                 "consumes": [
@@ -21,7 +21,53 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.GitRequest"
+                            "$ref": "#/definitions/main.GitCheckRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Вызов прошел успешно",
+                        "schema": {
+                            "$ref": "#/definitions/main.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/gitcopy": {
+            "post": {
+                "description": "Метод для отладки работы с git-ом",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Тестовый метод копирования файла из одного git-репозитория в другой",
+                "parameters": [
+                    {
+                        "description": "Параметры вызова",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.GitCopyRequest"
                         }
                     }
                 ],
@@ -69,7 +115,7 @@
                 }
             }
         },
-        "main.GitRequest": {
+        "main.GitCheckRequest": {
             "type": "object",
             "properties": {
                 "repoName": {
@@ -83,6 +129,27 @@
                 "repoUser": {
                     "type": "string",
                     "example": "elon@neof44.ru"
+                }
+            }
+        },
+        "main.GitCopyRequest": {
+            "type": "object",
+            "properties": {
+                "fileName": {
+                    "type": "string",
+                    "example": "filename to copy"
+                },
+                "fsubFolderName": {
+                    "type": "string",
+                    "example": "subfolder for file"
+                },
+                "repo1Password": {
+                    "type": "string",
+                    "example": "password or token"
+                },
+                "repo2Password": {
+                    "type": "string",
+                    "example": "password or token"
                 }
             }
         },
